modify logback config